--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -49,5 +49,12 @@
         android:drawableRight="@drawable/arrow_left"
         android:drawablePadding="4dp"
         />
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button"/>
 </FrameLayout>
 
